--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/PurnimaNaik/npm-package-download-count#readme",
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "css-loader": "^3.2.0",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.3",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "style-loader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
