--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "npm run build",
     "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback",
-    "build:prod": "webpack -p && cp src/index.html dist/index.html"
+    "build:prod": "webpack -p && cp src/index.html dist/index.html",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -21,10 +23,11 @@
   "bugs": {
     "url": "https://github.com/PurnimaNaik/npm-package-download-count/issues"
   },
-  "homepage": "https://github.com/PurnimaNaik/npm-package-download-count#readme",
+  "homepage": "https://purnimanaik.github.io/npm-package-download-count",
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "css-loader": "^3.2.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.3",
     "react-dom": "^16.9.0",
