--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "npm run build",
     "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback",
     "build:prod": "webpack -p && cp src/index.html dist/index.html",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,10 @@
   "bugs": {
     "url": "https://github.com/PurnimaNaik/npm-package-download-count/issues"
   },
-  "homepage": "https://purnimanaik.github.io/npm-package-download-count",
+  "homepage": "https://purnimanaik.github.io/npm-package-download-count/",
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "css-loader": "^3.2.0",
-    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.3",
     "react-dom": "^16.9.0",
@@ -41,6 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^7.5.5",
     "file-loader": "^4.2.0",
+    "gh-pages": "^2.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
